fixed sizing on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -16,17 +16,17 @@ aside, footer {
     background-color: green;
 }
 section {
-    width: 300px;
-    height: 450px;
+    width: 2.2em;
+    height: 3.7em;
     margin: 10px auto;
     border-radius: 15px;
     background-color: steelblue;
-    font-size: 120px;
+    font-size: 80pt;
     text-align: right;
     font-family: "Arial Black", sans-serif;
     box-sizing: border-box;
-    padding: 15px 40px 40px 40px;
-    line-height: 140px;
+    padding: 20px;
+    line-height: 1.1em;
 }
 form {
     height: 100px;
